# Neuman

./: .gitignore  ADR_002_LORE_AS_OPTIONAL_ART_STORAGE.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESKTOP_README.md  GITHUB_CI_WORKFLOW.yml  GITHUB_OFFICIAL_RELEASE_WORKFLOW.yml  GIT_ROJO_IMPLEMENTATION.md  GOVERNANCE.md  HUB_DESKTOP_ADAPTER.md  HUB_README.md  IMPLEMENTATION_STATUS.md  LICENSE  NOTICE  OFFICIAL_RELEASES.md  README.md  ROBLOX_BUILD_MANAGER_ARCHITECTURE.md  ROBLOX_OAUTH_REFRESH.md  SECURITY.md  SPEC_00_INDEX_AND_CONVENTIONS.md  SPEC_01_PRODUCT_BOUNDARIES_AND_INVARIANTS.md  SPEC_02_DOMAIN_MODEL_AND_STATE_MACHINES.md  SPEC_06_CORE_DAEMON_AND_CLI.md  SPEC_07_STUDIO_PLUGIN.md  SPEC_09_ART_CELLS_REVISIONS_AND_DIFFS.md  SPEC_12_GITHUB_APP_INTEGRATION.md  SPEC_13_ROBLOX_INTEGRATION.md  SPEC_15_RELEASE_PUBLISH_ROLLBACK_AND_DRIFT.md  SPEC_16_HUB_CONTROL_PLANE.md  SPEC_19_OBSERVABILITY_RELIABILITY_AND_BACKUP.md  SPEC_20_TESTING_COMPATIBILITY_AND_RELEASE_ENGINEERING.md  STUDIO_BRIDGE_README.md  STUDIO_RUNNER_README.md  bridge.rs  bridge_protocol.schema.json  build.rs  core.rs  (+29 more)
.github/: CODEOWNERS
.github/workflows/: ci.yml  official-release.yml
docs/: README.md
docs/adrs/: ADR_001_ROBLOX_NATIVE_ASSEMBLY_PROFILES.md
docs/guides/: CORE_IMPLEMENTATION.md  DESKTOP_README.md  GITHUB_APP_IMPLEMENTATION.md  GIT_ROJO_IMPLEMENTATION.md  HUB_README.md  OFFICIAL_RELEASES.md  ROBLOX_OAUTH_REFRESH.md  ROBLOX_RESOURCE_PROVIDER.md  ROJO_DESKTOP_CONFIG.md  STUDIO_BRIDGE_README.md  STUDIO_RUNNER_README.md
docs/specs/: SPEC_00_INDEX_AND_CONVENTIONS.md  SPEC_03_PROJECT_MANIFEST_AND_CONFIGURATION.md  SPEC_04_IDENTITY_AUTHENTICATION_AND_AUTHORIZATION.md  SPEC_05_DESKTOP_APPLICATION.md  SPEC_08_LOOPBACK_BRIDGE_PROTOCOL.md  SPEC_10_TERRAIN_SERVICES_ASSETS_AND_PACKAGES.md  SPEC_11_GIT_AND_ROJO_INTEGRATION.md  SPEC_13_ROBLOX_INTEGRATION.md  SPEC_14_BUILD_ENGINE.md  SPEC_17_STORAGE_CAS_GIT_LFS_AND_LORE.md  SPEC_18_SECURITY_AND_THREAT_MODEL.md  SPEC_20_TESTING_COMPATIBILITY_AND_RELEASE_ENGINEERING.md  SPEC_21_OPEN_SOURCE_GOVERNANCE_AND_DISTRIBUTION.md  SPEC_22_TRACEABILITY_AND_ACCEPTANCE_MATRIX.md
docs/status/: IMPLEMENTATION_STATUS.md
schemas/: hub.sql  runner-manifest.schema.json
scripts/: check-doc-links.mjs
scripts/release/: contract-test.mjs  manifest.mjs  preflight.mjs
