[package]
name = "neuman-desktop"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.88"
authors = ["NeuMan Contributors"]
repository = "https://github.com/neuman-build/neuman"
build = "build.rs"

[workspace]
resolver = "2"

[lib]
name = "neuman"
path = "neuman_lib.rs"

[[bin]]
name = "neuman"
path = "neuman_cli.rs"

[[bin]]
name = "neuman-bridge"
path = "neuman_bridge.rs"

[[bin]]
name = "neuman-hub"
path = "neuman_hub.rs"

[[bin]]
name = "neuman-desktop"
path = "neuman_desktop.rs"
required-features = ["desktop"]

[features]
default = []
desktop = ["dep:tauri", "dep:tauri-plugin-updater"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["json", "macros", "ws"] }
base64 = "0.22"
blake3 = "1.8"
bytes = "1.10"
clap = { version = "4.5", features = ["derive", "env"] }
directories = "6.0"
futures-util = "0.3"
hex = "0.4"
http = "1.3"
jsonwebtoken = "9.3"
keyring = { version = "3.6", default-features = false, features = ["windows-native", "apple-native"] }
mime = "0.3"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
rusqlite = { version = "0.36", features = ["bundled", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_jcs = "0.2"
serde_yaml = "0.9"
sha2 = "0.10"
subtle = "2.6"
tauri = { version = "2.8", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
tempfile = "3.20"
thiserror = "2.0"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
tokio = { version = "1.47", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit", "request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.18", features = ["v4", "v7", "serde"] }

[build-dependencies]
tauri-build = { version = "2.4" }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
